test_files/negative/generation/negative.stats
Version : 1.5
Lexing error at offset 880 [0x370] : unexpected character : 0x2d !
